200118 dart crawling update

--- a/python_fundamental/Ex_Python_Dart_NotAJAX_OnlyFull_2020_01_exURL.ipynb
+++ b/python_fundamental/Ex_Python_Dart_NotAJAX_OnlyFull_2020_01_exURL.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 5,
    "metadata": {
     "scrolled": false
    },
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -256,7 +256,7 @@
        "'\\r\\n\\t\\t[1/9] [총 894건]\\r\\n\\t'"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -277,7 +277,7 @@
        "'\\r\\n\\t\\t총 894건]\\r\\n\\t'"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -298,7 +298,7 @@
        "'\\r\\n\\t\\t 894건]\\r\\n\\t'"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -320,7 +320,7 @@
        "'\\r\\n\\t\\t 894]\\r\\n\\t'"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -342,7 +342,7 @@
        "'\\r\\n\\t\\t 894\\r\\n\\t'"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -363,7 +363,7 @@
        "'894'"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -384,7 +384,7 @@
        "894"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -396,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -405,7 +405,7 @@
        "9"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -713,7 +713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": 19,
    "metadata": {
     "scrolled": true
    },
@@ -811,52 +811,52 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <td>889</td>\n",
-       "      <td>00619923</td>\n",
-       "      <td>명보기업</td>\n",
+       "      <td>00178806</td>\n",
+       "      <td>바이더웨이</td>\n",
        "      <td>기타법인</td>\n",
        "      <td>2017.03.28</td>\n",
-       "      <td>17:35</td>\n",
-       "      <td>20170328000838</td>\n",
-       "      <td>호가중개시스템을통한소액매출공시서류</td>\n",
+       "      <td>07:00</td>\n",
+       "      <td>20170327000959</td>\n",
+       "      <td>임원의변동</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>890</td>\n",
-       "      <td>00138321</td>\n",
-       "      <td>신한금융투자</td>\n",
+       "      <td>01083000</td>\n",
+       "      <td>케이엔에프인터내셔날</td>\n",
        "      <td>기타법인</td>\n",
        "      <td>2017.03.28</td>\n",
-       "      <td>17:34</td>\n",
-       "      <td>20170328000832</td>\n",
-       "      <td>일괄신고추가서류(파생결합사채-주가연계파생결합사채)</td>\n",
+       "      <td>07:00</td>\n",
+       "      <td>20170327000967</td>\n",
+       "      <td>감사보고서</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>891</td>\n",
-       "      <td>00476498</td>\n",
-       "      <td>컴투스</td>\n",
-       "      <td>코스닥시장</td>\n",
+       "      <td>01078868</td>\n",
+       "      <td>케이피엑스글로벌</td>\n",
+       "      <td>기타법인</td>\n",
        "      <td>2017.03.28</td>\n",
-       "      <td>17:34</td>\n",
-       "      <td>20170328000806</td>\n",
-       "      <td>주요사항보고서(자기주식처분결정)</td>\n",
+       "      <td>07:00</td>\n",
+       "      <td>20170327000958</td>\n",
+       "      <td>감사보고서</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>892</td>\n",
-       "      <td>00379016</td>\n",
-       "      <td>이엘케이</td>\n",
-       "      <td>코스닥시장</td>\n",
+       "      <td>00186513</td>\n",
+       "      <td>코리아세븐</td>\n",
+       "      <td>기타법인</td>\n",
        "      <td>2017.03.28</td>\n",
-       "      <td>17:33</td>\n",
-       "      <td>20170328000802</td>\n",
-       "      <td>주요사항보고서(유상증자결정)</td>\n",
+       "      <td>07:00</td>\n",
+       "      <td>20170327000962</td>\n",
+       "      <td>동일인등출자계열회사와의상품ㆍ용역거래</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>893</td>\n",
-       "      <td>00842521</td>\n",
-       "      <td>한국인프라관리</td>\n",
+       "      <td>00862826</td>\n",
+       "      <td>코릴</td>\n",
        "      <td>기타법인</td>\n",
        "      <td>2017.03.28</td>\n",
-       "      <td>17:33</td>\n",
-       "      <td>20170328000829</td>\n",
+       "      <td>07:00</td>\n",
+       "      <td>20170327000968</td>\n",
        "      <td>감사보고서</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -865,36 +865,36 @@
        "</div>"
       ],
       "text/plain": [
-       "         coID    coName market     pubDate pubTime           rcpNo  \\\n",
-       "0    01109690  포레스팅블록체인  코넥스시장  2017.03.28   18:58  20170328601049   \n",
-       "1    00364403       쏠리드  코스닥시장  2017.03.28   18:46  20170328901048   \n",
-       "2    00308559        코디  코스닥시장  2017.03.28   18:35  20170328901037   \n",
-       "3    00308559        코디  코스닥시장  2017.03.28   18:35  20170328901047   \n",
-       "4    00207223      위너지스   기타법인  2017.03.28   18:29  20170328901039   \n",
-       "..        ...       ...    ...         ...     ...             ...   \n",
-       "889  00619923      명보기업   기타법인  2017.03.28   17:35  20170328000838   \n",
-       "890  00138321    신한금융투자   기타법인  2017.03.28   17:34  20170328000832   \n",
-       "891  00476498       컴투스  코스닥시장  2017.03.28   17:34  20170328000806   \n",
-       "892  00379016      이엘케이  코스닥시장  2017.03.28   17:33  20170328000802   \n",
-       "893  00842521   한국인프라관리   기타법인  2017.03.28   17:33  20170328000829   \n",
+       "         coID      coName market     pubDate pubTime           rcpNo  \\\n",
+       "0    01109690    포레스팅블록체인  코넥스시장  2017.03.28   18:58  20170328601049   \n",
+       "1    00364403         쏠리드  코스닥시장  2017.03.28   18:46  20170328901048   \n",
+       "2    00308559          코디  코스닥시장  2017.03.28   18:35  20170328901037   \n",
+       "3    00308559          코디  코스닥시장  2017.03.28   18:35  20170328901047   \n",
+       "4    00207223        위너지스   기타법인  2017.03.28   18:29  20170328901039   \n",
+       "..        ...         ...    ...         ...     ...             ...   \n",
+       "889  00178806       바이더웨이   기타법인  2017.03.28   07:00  20170327000959   \n",
+       "890  01083000  케이엔에프인터내셔날   기타법인  2017.03.28   07:00  20170327000967   \n",
+       "891  01078868    케이피엑스글로벌   기타법인  2017.03.28   07:00  20170327000958   \n",
+       "892  00186513       코리아세븐   기타법인  2017.03.28   07:00  20170327000962   \n",
+       "893  00862826          코릴   기타법인  2017.03.28   07:00  20170327000968   \n",
        "\n",
-       "                           title  \n",
-       "0                        감사보고서제출  \n",
-       "1             불성실공시법인지정예고(공시불이행)  \n",
-       "2               주권매매거래정지(불성실공시법인  \n",
-       "3               불성실공시법인지정(공시불이행)  \n",
-       "4               주권매매거래정지(불성실공시법인  \n",
-       "..                           ...  \n",
-       "889           호가중개시스템을통한소액매출공시서류  \n",
-       "890  일괄신고추가서류(파생결합사채-주가연계파생결합사채)  \n",
-       "891            주요사항보고서(자기주식처분결정)  \n",
-       "892              주요사항보고서(유상증자결정)  \n",
-       "893                        감사보고서  \n",
+       "                   title  \n",
+       "0                감사보고서제출  \n",
+       "1     불성실공시법인지정예고(공시불이행)  \n",
+       "2       주권매매거래정지(불성실공시법인  \n",
+       "3       불성실공시법인지정(공시불이행)  \n",
+       "4       주권매매거래정지(불성실공시법인  \n",
+       "..                   ...  \n",
+       "889                임원의변동  \n",
+       "890                감사보고서  \n",
+       "891                감사보고서  \n",
+       "892  동일인등출자계열회사와의상품ㆍ용역거래  \n",
+       "893                감사보고서  \n",
        "\n",
        "[894 rows x 7 columns]"
       ]
      },
-     "execution_count": 246,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -921,7 +921,7 @@
     "    \n",
     "    # 해당 페이지 불러오기\n",
     "    url_page = url + str(i+1)\n",
-    "    res = requests.get(url)\n",
+    "    res = requests.get(url_page)\n",
     "    soup=bs(res.text, 'html.parser')\n",
     "    \n",
     "    for j in range(countNum):\n",
@@ -943,196 +943,8 @@
     "        \n",
     "        df_dart = df_dart.append(df_dart_temp, ignore_index=True) \n",
     "        df_dart_temp.iloc[0] = \"\"\n",
-    " \n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 247,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>coID</th>\n",
-       "      <th>coName</th>\n",
-       "      <th>market</th>\n",
-       "      <th>pubDate</th>\n",
-       "      <th>pubTime</th>\n",
-       "      <th>rcpNo</th>\n",
-       "      <th>title</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <td>0</td>\n",
-       "      <td>01109690</td>\n",
-       "      <td>포레스팅블록체인</td>\n",
-       "      <td>코넥스시장</td>\n",
-       "      <td>2017.03.28</td>\n",
-       "      <td>18:58</td>\n",
-       "      <td>20170328601049</td>\n",
-       "      <td>감사보고서제출</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1</td>\n",
-       "      <td>00364403</td>\n",
-       "      <td>쏠리드</td>\n",
-       "      <td>코스닥시장</td>\n",
-       "      <td>2017.03.28</td>\n",
-       "      <td>18:46</td>\n",
-       "      <td>20170328901048</td>\n",
-       "      <td>불성실공시법인지정예고(공시불이행)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>2</td>\n",
-       "      <td>00308559</td>\n",
-       "      <td>코디</td>\n",
-       "      <td>코스닥시장</td>\n",
-       "      <td>2017.03.28</td>\n",
-       "      <td>18:35</td>\n",
-       "      <td>20170328901037</td>\n",
-       "      <td>주권매매거래정지(불성실공시법인</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>3</td>\n",
-       "      <td>00308559</td>\n",
-       "      <td>코디</td>\n",
-       "      <td>코스닥시장</td>\n",
-       "      <td>2017.03.28</td>\n",
-       "      <td>18:35</td>\n",
-       "      <td>20170328901047</td>\n",
-       "      <td>불성실공시법인지정(공시불이행)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>4</td>\n",
-       "      <td>00207223</td>\n",
-       "      <td>위너지스</td>\n",
-       "      <td>기타법인</td>\n",
-       "      <td>2017.03.28</td>\n",
-       "      <td>18:29</td>\n",
-       "      <td>20170328901039</td>\n",
-       "      <td>주권매매거래정지(불성실공시법인</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>889</td>\n",
-       "      <td>00619923</td>\n",
-       "      <td>명보기업</td>\n",
-       "      <td>기타법인</td>\n",
-       "      <td>2017.03.28</td>\n",
-       "      <td>17:35</td>\n",
-       "      <td>20170328000838</td>\n",
-       "      <td>호가중개시스템을통한소액매출공시서류</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>890</td>\n",
-       "      <td>00138321</td>\n",
-       "      <td>신한금융투자</td>\n",
-       "      <td>기타법인</td>\n",
-       "      <td>2017.03.28</td>\n",
-       "      <td>17:34</td>\n",
-       "      <td>20170328000832</td>\n",
-       "      <td>일괄신고추가서류(파생결합사채-주가연계파생결합사채)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>891</td>\n",
-       "      <td>00476498</td>\n",
-       "      <td>컴투스</td>\n",
-       "      <td>코스닥시장</td>\n",
-       "      <td>2017.03.28</td>\n",
-       "      <td>17:34</td>\n",
-       "      <td>20170328000806</td>\n",
-       "      <td>주요사항보고서(자기주식처분결정)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>892</td>\n",
-       "      <td>00379016</td>\n",
-       "      <td>이엘케이</td>\n",
-       "      <td>코스닥시장</td>\n",
-       "      <td>2017.03.28</td>\n",
-       "      <td>17:33</td>\n",
-       "      <td>20170328000802</td>\n",
-       "      <td>주요사항보고서(유상증자결정)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>893</td>\n",
-       "      <td>00842521</td>\n",
-       "      <td>한국인프라관리</td>\n",
-       "      <td>기타법인</td>\n",
-       "      <td>2017.03.28</td>\n",
-       "      <td>17:33</td>\n",
-       "      <td>20170328000829</td>\n",
-       "      <td>감사보고서</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>894 rows × 7 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "         coID    coName market     pubDate pubTime           rcpNo  \\\n",
-       "0    01109690  포레스팅블록체인  코넥스시장  2017.03.28   18:58  20170328601049   \n",
-       "1    00364403       쏠리드  코스닥시장  2017.03.28   18:46  20170328901048   \n",
-       "2    00308559        코디  코스닥시장  2017.03.28   18:35  20170328901037   \n",
-       "3    00308559        코디  코스닥시장  2017.03.28   18:35  20170328901047   \n",
-       "4    00207223      위너지스   기타법인  2017.03.28   18:29  20170328901039   \n",
-       "..        ...       ...    ...         ...     ...             ...   \n",
-       "889  00619923      명보기업   기타법인  2017.03.28   17:35  20170328000838   \n",
-       "890  00138321    신한금융투자   기타법인  2017.03.28   17:34  20170328000832   \n",
-       "891  00476498       컴투스  코스닥시장  2017.03.28   17:34  20170328000806   \n",
-       "892  00379016      이엘케이  코스닥시장  2017.03.28   17:33  20170328000802   \n",
-       "893  00842521   한국인프라관리   기타법인  2017.03.28   17:33  20170328000829   \n",
-       "\n",
-       "                           title  \n",
-       "0                        감사보고서제출  \n",
-       "1             불성실공시법인지정예고(공시불이행)  \n",
-       "2               주권매매거래정지(불성실공시법인  \n",
-       "3               불성실공시법인지정(공시불이행)  \n",
-       "4               주권매매거래정지(불성실공시법인  \n",
-       "..                           ...  \n",
-       "889           호가중개시스템을통한소액매출공시서류  \n",
-       "890  일괄신고추가서류(파생결합사채-주가연계파생결합사채)  \n",
-       "891            주요사항보고서(자기주식처분결정)  \n",
-       "892              주요사항보고서(유상증자결정)  \n",
-       "893                        감사보고서  \n",
-       "\n",
-       "[894 rows x 7 columns]"
-      ]
-     },
-     "execution_count": 247,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
+    "\n",
+    "\n",
     "df_dart"
    ]
   }
