--- a/python_fundamental/05_3_Pandas_Apply_Lambda.ipynb
+++ b/python_fundamental/05_3_Pandas_Apply_Lambda.ipynb
@@ -199,12 +199,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## lambda apply\n",
+    "- total_df.apply(lambda x: ....) -> default로 칼럼 기준으로 적용이 된다. axis=0(칼럼 기준)  \n",
+    "- total_df.apply(lambda x: ...., axis = 1) -> axis =1하면 행 기준으로 적용이 된다.  \n",
+    "- total_df[\"특정칼럼\"].apply(lambda x: ....) 하면 지정한 특정칼럼에서 각 행에 대해서 적용을 할 수 있다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### 요일별로 최고값과 최저값을 찾아서 그 차이를 계산해보자"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -223,7 +233,13 @@
       "2016-12-01    10000\n",
       "2017-03-01    10000\n",
       "dtype: int64\n",
-      "\n"
+      "\n",
+      "2016-03-01    100.0\n",
+      "2016-06-01    103.0\n",
+      "2016-09-01     99.0\n",
+      "2016-12-01    105.0\n",
+      "2017-03-01    110.0\n",
+      "Name: 시가, dtype: float64\n"
      ]
     }
    ],
@@ -233,7 +249,8 @@
     "print(stock_price_DF_withIndex.apply(lambda x : x.max() - x.min())) # 열 단위로 max값과 min값의 차이를 출력\n",
     "print()\n",
     "print(stock_price_DF_withIndex.apply(lambda x : x.max() - x.min(), axis = 1)) # 행 단위로 기준\n",
-    "print()"
+    "print()\n",
+    "print(stock_price_DF_withIndex[\"시가\"].apply(lambda x: x / 100)) "
    ]
   },
   {
