--- a/python_fundamental/05_4_Pandas_IO.ipynb
+++ b/python_fundamental/05_4_Pandas_IO.ipynb
@@ -1512,7 +1512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1525,35 +1525,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['C:/Users/user/git/anaconda/python_fundamental/data/sampledata/06_manyfile\\\\1763.csv', 'C:/Users/user/git/anaconda/python_fundamental/data/sampledata/06_manyfile\\\\1764.csv', 'C:/Users/user/git/anaconda/python_fundamental/data/sampledata/06_manyfile\\\\1765.csv', 'C:/Users/user/git/anaconda/python_fundamental/data/sampledata/06_manyfile\\\\1766.csv', 'C:/Users/user/git/anaconda/python_fundamental/data/sampledata/06_manyfile\\\\1767.csv', 'C:/Users/user/git/anaconda/python_fundamental/data/sampledata/06_manyfile\\\\1768.csv', 'C:/Users/user/git/anaconda/python_fundamental/data/sampledata/06_manyfile\\\\1769.csv', 'C:/Users/user/git/anaconda/python_fundamental/data/sampledata/06_manyfile\\\\1770.csv', 'C:/Users/user/git/anaconda/python_fundamental/data/sampledata/06_manyfile\\\\1771.csv', 'C:/Users/user/git/anaconda/python_fundamental/data/sampledata/06_manyfile\\\\1772.csv']\n"
+      "['C:/Users/1-17/git/anaconda/python_fundamental/data/06_manyfile\\\\1763.csv', 'C:/Users/1-17/git/anaconda/python_fundamental/data/06_manyfile\\\\1764.csv', 'C:/Users/1-17/git/anaconda/python_fundamental/data/06_manyfile\\\\1765.csv', 'C:/Users/1-17/git/anaconda/python_fundamental/data/06_manyfile\\\\1766.csv', 'C:/Users/1-17/git/anaconda/python_fundamental/data/06_manyfile\\\\1767.csv', 'C:/Users/1-17/git/anaconda/python_fundamental/data/06_manyfile\\\\1768.csv', 'C:/Users/1-17/git/anaconda/python_fundamental/data/06_manyfile\\\\1769.csv', 'C:/Users/1-17/git/anaconda/python_fundamental/data/06_manyfile\\\\1770.csv', 'C:/Users/1-17/git/anaconda/python_fundamental/data/06_manyfile\\\\1771.csv', 'C:/Users/1-17/git/anaconda/python_fundamental/data/06_manyfile\\\\1772.csv']\n"
      ]
     }
    ],
    "source": [
-    "many_file_path = \"C:/Users/user/git/anaconda/python_fundamental/data/sampledata/06_manyfile/*.csv\"\n",
+    "many_file_path = \"C:/Users/1-17/git/anaconda/python_fundamental/data/06_manyfile/*.csv\"\n",
     "filePathList = glob.glob(many_file_path)\n",
     "print(filePathList)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'C:/Users/user/git/anaconda/python_fundamental/data/sampledata/06_manyfile\\\\1765.csv'"
+       "'C:/Users/1-17/git/anaconda/python_fundamental/data/06_manyfile\\\\1765.csv'"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1806,7 +1806,7 @@
    ],
    "source": [
     "# Excel\n",
-    "excelPath = \"C:/Users/user/git/anaconda/python_fundamental/data/sampledata/07_surveys_excelformat.xls\"\n",
+    "excelPath = \"C:/Users/1-17/git/anaconda/python_fundamental/data/07_surveys_excelformat.xls\"\n",
     "\n",
     "# 참고: pandas가 업데이트 되면서 과거 sheetname이 sheet_name 등으로 변경\n",
     "excel_data = pd.read_excel(excelPath, sheet_name = \"Sheet1\")\n",
@@ -1923,11 +1923,11 @@
     "# 참고: 과거 - to_excel로 신버전의 확장자를 지정할수는 있고 에러가 없이 출력가능, 과거 확장자는 안됐음\n",
     "# 현재(pandas v23): 모두 가능하고 제대로 열림\n",
     "# xlsx format\n",
-    "excelOutPath = \"C:/Users/user/git/anaconda/python_fundamental/data/sampledata/07_surveys_excelformat_output.xlsx\"\n",
+    "excelOutPath = \"C:/Users/1-17/git/anaconda/python_fundamental/data/07_surveys_excelformat_output.xlsx\"\n",
     "excel_data.to_excel(excelOutPath)\n",
     "\n",
     "# xls format\n",
-    "excelOutPath = \"C:/Users/user/git/anaconda/python_fundamental/data/sampledata/07_surveys_excelformat_output2.xls\"\n",
+    "excelOutPath = \"C:/Users/1-17/git/anaconda/python_fundamental/data/07_surveys_excelformat_output2.xls\"\n",
     "excel_data.to_excel(excelOutPath)"
    ]
   },
@@ -3361,17 +3361,21 @@
     "\n",
     "\n",
     "idx_moviecd = df_movie_temp.columns.get_loc(\"movieCd\")\n",
+    "idx_movienm = df_movie_temp.columns.get_loc(\"movieNm\")\n",
+    "idx_movienmen = df_movie_temp.columns.get_loc(\"movieNmEn\")\n",
+    "idx_opendt = df_movie_temp.columns.get_loc(\"openDt\")\n",
+    "idx_directorpeoplenm = df_movie_temp.columns.get_loc(\"directorpeopleNm\")\n",
     "\n",
     "for i in range(len(movieIdData[\"movieListResult\"][\"movieList\"])):\n",
     "    i_movie =  movieIdData[\"movieListResult\"][\"movieList\"][i]\n",
     "    df_movie_temp.iat[0,idx_moviecd] = i_movie[\"movieCd\"]\n",
-    "    df_movie_temp.iat[0,df_movie_temp.columns.get_loc(\"movieNm\")] = i_movie[\"movieNm\"]\n",
-    "    df_movie_temp.iat[0,df_movie_temp.columns.get_loc(\"movieNmEn\")] = i_movie[\"movieNmEn\"]\n",
-    "    df_movie_temp.iat[0,df_movie_temp.columns.get_loc(\"openDt\")] = i_movie[\"openDt\"]\n",
+    "    df_movie_temp.iat[0,idx_movienm] = i_movie[\"movieNm\"]\n",
+    "    df_movie_temp.iat[0,idx_movienmen] = i_movie[\"movieNmEn\"]\n",
+    "    df_movie_temp.iat[0,idx_opendt] = i_movie[\"openDt\"]\n",
     "    if len(i_movie[\"directors\"]) != 0:\n",
-    "        df_movie_temp.iat[0,df_movie_temp.columns.get_loc(\"directorpeopleNm\")] = i_movie[\"directors\"][0][\"peopleNm\"]\n",
+    "        df_movie_temp.iat[0,idx_directorpeoplenm] = i_movie[\"directors\"][0][\"peopleNm\"]\n",
     "    else:\n",
-    "        df_movie_temp.iat[0,df_movie_temp.columns.get_loc(\"directorpeopleNm\")] = \"\"\n",
+    "        df_movie_temp.iat[0,idx_directorpeoplenm] = \"\"\n",
     "    # 여기서 append해서 다시 df_movie에 추가하는 것은 바로 df_movie에서 iat indexing으로 쌓는 것이 막혀서 그렇다.\n",
     "    df_movie = df_movie.append(df_movie_temp, ignore_index=True)    \n",
     "    # 다시 빈 dataframe값으로 돌리는 것이 좋다. 왜냐하면 앞에서 했던 값들이 남아있을 수 있기 때문이다.\n",
