--- a/python_fundamental/05_4_Pandas_IO.ipynb
+++ b/python_fundamental/05_4_Pandas_IO.ipynb
@@ -243,7 +243,7 @@
    ],
    "source": [
     "# 경로 설정할 때 / 슬래시 처리로 해야한다.(\\는 안됨)\n",
-    "testCSV_path = \"C:/Users/user/git/anaconda/python_fundamental/data/sampledata/01_olive.csv\"\n",
+    "testCSV_path = \"/data/01_olive.csv\"\n",
     "\n",
     "# 첫번 째 줄을 칼럼명으로 인식\n",
     "olive_oil = pd.read_csv(testCSV_path)\n",
