--- a/python_fundamental/04_Machine_Learning/ML_01_1_Machine_Learning.ipynb
+++ b/python_fundamental/04_Machine_Learning/ML_01_1_Machine_Learning.ipynb
@@ -495,7 +495,7 @@
     "# 정답지에 대해서는 변하는 것이 없고 data에 대해 값을 변경한다.\n",
     "# data를 check해서 정해진 룰에 따라 변형(fitting)시키는것 : fit_transform()\n",
     "# train을 하면 test도 수정해야 한다. (중요 체크) \n",
-    "min_max_scaler - MinMaxScaler()\n",
+    "min_max_scaler = MinMaxScaler()\n",
     "train_norm = min_max_scaler.fit_transform(train_data)\n",
     "test_norm = min_max_scaler.fit_transform(test_data)\n",
     "\n",
