--- a/python_fundamental/04_Machine_Learning/ML_01_2_MNIST_BasedKaggle.ipynb
+++ b/python_fundamental/04_Machine_Learning/ML_01_2_MNIST_BasedKaggle.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,9 +26,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\1-17\\Anaconda3\\lib\\site-packages\\sklearn\\utils\\deprecation.py:85: DeprecationWarning: Function fetch_mldata is deprecated; fetch_mldata was deprecated in version 0.20 and will be removed in version 0.22. Please use fetch_openml.\n",
+      "  warnings.warn(msg, category=DeprecationWarning)\n",
+      "C:\\Users\\1-17\\Anaconda3\\lib\\site-packages\\sklearn\\utils\\deprecation.py:85: DeprecationWarning: Function mldata_filename is deprecated; mldata_filename was deprecated in version 0.20 and will be removed in version 0.22. Please use fetch_openml.\n",
+      "  warnings.warn(msg, category=DeprecationWarning)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'DESCR': 'mldata.org dataset: mnist-original',\n",
+       " 'COL_NAMES': ['label', 'data'],\n",
+       " 'target': array([0., 0., 0., ..., 9., 9., 9.]),\n",
+       " 'data': array([[0, 0, 0, ..., 0, 0, 0],\n",
+       "        [0, 0, 0, ..., 0, 0, 0],\n",
+       "        [0, 0, 0, ..., 0, 0, 0],\n",
+       "        ...,\n",
+       "        [0, 0, 0, ..., 0, 0, 0],\n",
+       "        [0, 0, 0, ..., 0, 0, 0],\n",
+       "        [0, 0, 0, ..., 0, 0, 0]], dtype=uint8)}"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "mnist = fetch_mldata(\"MNIST original\")\n",
     "mnist"
@@ -43,7 +73,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Process Time : 21.966893911361694\n",
+      "Process Time : 21.430734157562256\n",
       "[[1 0 0 ... 0 0 0]\n",
       " [0 0 0 ... 0 0 0]\n",
       " [1 0 0 ... 0 0 0]\n",
@@ -73,7 +103,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Process Time : 13.243856191635132\n",
+      "Process Time : 14.339330196380615\n",
       "[[0 0 0 ... 0 0 0]\n",
       " [0 0 0 ... 0 0 0]\n",
       " [0 0 0 ... 0 0 0]\n",
