--- a/python_fundamental/04_Machine_Learning/Test_Modeling_Titanic.ipynb
+++ b/python_fundamental/04_Machine_Learning/Test_Modeling_Titanic.ipynb
@@ -954,7 +954,7 @@
    "cell_type": "code",
    "execution_count": 44,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
