--- a/python_fundamental/04_Machine_Learning/Titanic_Data_Handling.ipynb
+++ b/python_fundamental/04_Machine_Learning/Titanic_Data_Handling.ipynb
@@ -2429,6 +2429,41 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- learning_rate: 0~1 (0.3 default) GBM의 학습률\n",
+    "- num_boost_rounds : GBM n_estimator와 같은 경우\n",
+    "- min_child_weight : GBM 의 min_child_leaf와 유사, 과적합 조절하는데 사용\n",
+    "- Gamma: 트리의 리프 노드를 추가로 나눌지 결정할 최소 손실 감소 값, 기준값보다 큰 손실이 감소된 경우에는 리프노드를 분리한다. 값이 클 수록 과적합 감소효과\n",
+    "- max_depth\n",
+    "- sub_sample\n",
+    "- colsample_bytree\n",
+    "- Lambda\n",
+    "- Alplha\n",
+    "- scale_pos_weight"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "학습 데스크 파라미터\n",
+    "- Object: 최소값을 가져야할 손실 함수를 정의. xgboost의 경우에는 많은 유형의 손실함수를 사용할 수 있음\n",
+    "- Binary: 이진 분류일 때 적용\n",
+    "- Multi:softmax: 다중 분류일 때\n",
+    "- Multi:softprob\n",
+    "- eval_metric: 검증에 사용되는 함수 : rmse, mae, logloss, error(2진의 경우 0.5기준), merrr, mlogloss, auc etc"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Overfitting"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 334,
    "metadata": {},
@@ -2662,6 +2697,13 @@
     "XGB_predictions = XGB_best.predict(X_test)\n",
     "accuracy = accuracy_score(y_test, XGB_predictions)\n",
     "print(\"XGB에서 GridSearchCV로 찾은 결과 : {0:.4f}\".format(accuracy))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# LightGBM"
    ]
   },
   {
