--- a/python_fundamental/06_simpletest/House_regression_multiAlgo.ipynb
+++ b/python_fundamental/06_simpletest/House_regression_multiAlgo.ipynb
@@ -813,7 +813,7 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x296dfe93188>"
+       "<seaborn.axisgrid.PairGrid at 0x1a5ff5bfd88>"
       ]
      },
      "execution_count": 13,
@@ -1526,8 +1526,8 @@
        "AsbShng      44\n",
        "Stucco       42\n",
        "BrkComm       6\n",
-       "AsphShn       2\n",
        "CBlock        2\n",
+       "AsphShn       2\n",
        "Stone         2\n",
        "ImStucc       1\n",
        "Name: Exterior1st, dtype: int64"
@@ -2222,7 +2222,7 @@
      "output_type": "stream",
      "text": [
       "[Parallel(n_jobs=-1)]: Using backend LokyBackend with 8 concurrent workers.\n",
-      "[Parallel(n_jobs=-1)]: Done  24 out of  24 | elapsed:    6.3s finished\n"
+      "[Parallel(n_jobs=-1)]: Done  24 out of  24 | elapsed:    6.9s finished\n"
      ]
     },
     {
@@ -2234,7 +2234,7 @@
       "                      min_impurity_decrease=0.0, min_impurity_split=None,\n",
       "                      min_samples_leaf=2, min_samples_split=2,\n",
       "                      min_weight_fraction_leaf=0.0, n_estimators=100, n_jobs=-1,\n",
-      "                      oob_score=False, random_state=1234, verbose=0,\n",
+      "                      oob_score=True, random_state=1234, verbose=0,\n",
       "                      warm_start=False)\n"
      ]
     }
